--- a/wally.toml
+++ b/wally.toml
@@ -2,10 +2,14 @@
 name = "nightcycle/package"
 description = "A package!"
 version = "0.1.0"
-authors = ["CJ Oyer <coyer@nightcycle.us>"]
+authors = [ "CJ Oyer <coyer@nightcycle.us>",]
 realm = "shared"
 registry = "https://github.com/upliftgames/wally-index"
-exclude = ["Packages", ".vscode"]
+exclude = [ "Packages", ".vscode",]
 
 [dependencies]
-Maid = "nightcycle/maid@^1.1.4"
+Maid = "nightcycle/maid@1.1.4"
+GeometryUtil = "nightcycle/geometry-util@2.0.1"
+Draw = "nightcycle/draw@1.0.6"
+TableUtil = "nightcycle/table-util@1.1.0"
+Signal = "nightcycle/signal@1.0.2"
