Got basic block info working

--- a/wally.toml
+++ b/wally.toml
@@ -13,3 +13,4 @@ GeometryUtil = "nightcycle/geometry-util@2.0.1"
 Draw = "nightcycle/draw@1.0.6"
 TableUtil = "nightcycle/table-util@1.1.0"
 Signal = "nightcycle/signal@1.0.2"
+MeshUtil = "nightcycle/mesh-util@1.0.3"
