Pieces work individually, but not collectively

--- a/wally.toml
+++ b/wally.toml
@@ -14,3 +14,4 @@ Draw = "nightcycle/draw@1.0.6"
 TableUtil = "nightcycle/table-util@1.1.0"
 Signal = "nightcycle/signal@1.0.2"
 MeshUtil = "nightcycle/mesh-util@1.0.3"
+Queue = "nightcycle/queue@2.2.0"
