--- a/wally.toml
+++ b/wally.toml
@@ -15,3 +15,4 @@ TableUtil = "nightcycle/table-util@1.1.0"
 Signal = "nightcycle/signal@1.0.2"
 MeshUtil = "nightcycle/mesh-util@1.0.3"
 Queue = "nightcycle/queue@2.2.0"
+Frustum = "nightcycle/frustum@1.0.0"
